--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           </nav>
     </header>
     <main>
-        <!-- <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -67,9 +67,34 @@
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Next</span>
             </button>
-          </div> -->
+          </div>
+          <div class="contactos">
+          <div class="container text-center">
+            <div class="row">
+              <div class="col-sm-12 col-lg-6">
+                <div class="container ">
+                    <div class="row">
+                        <div class="col">
+                            <a href=""><img src="./assets/fb.svg" alt=""></a> 
+                        </div>
+                        <div class="col">
+                            <a href=""><img src="./assets/ig.svg" alt=""></a>
+                        </div>
+                        <div class="col">
+                            <a href="" ><img src="./assets/whatsapp.svg" alt=""></a>
+                        </div>
+                    </div>                    
+                </div>
+              </div>
+              <div class="col-sm-12 col-lg-6">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1893.6572620580228!2d-58.33964953500877!3d-34.75410237358631!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a32d1a9b35cf91%3A0xd6365b7fa1d6609e!2sLa%20Golondrina%204459%2C%20B1834CYD%20Temperley%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1670197213745!5m2!1ses-419!2sar" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              </div>
+            </div>
+          </div>
+        </div>
     </main>
     <footer>
+        <div class="text-center">copi</div>
 
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
