--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./assets/logo_chiquito.png"/>
+    <link rel="shortcut icon" href="../assets/logo_chiquito.png"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <title>Abamel</title>
 </head>
 <body>
@@ -14,14 +14,14 @@
     <header>
         <nav class="navbar navbar-expand-lg" style="background-color: #fad7da;">
             <div class="container-fluid">
-              <a class="navbar-brand" href="index.html"><img src="./assets/logo.png" alt=""></a>
+              <a class="navbar-brand" href="../index.html"><img src="../assets/logo.png" alt=""></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="pages/productos.html">Productos</a>
+                    <a class="nav-link active" aria-current="page" href="./productos.html">Productos</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="#">Pedidos</a>
@@ -30,7 +30,7 @@
                     <a class="nav-link active" aria-current="page" href="#">Nosotros</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="./pages/contacto.html">Empleo</a>
+                    <a class="nav-link active" aria-current="page" href="#">Contactos</a>
                   </li>
                 </ul>
               </div>
@@ -38,50 +38,33 @@
           </nav>
     </header>
     <main>
-        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
-            <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-            </div>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="./assets/fondo.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h4>Tortas Clasicas</h4>
-                    <p>Some representative placeholder content for the first slide.</p>
-                  </div>
-              </div>
-              <div class="carousel-item">
-                <img src="./assets/torta1.jpg" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="./assets/torta2.jpg" class="d-block w-100" alt="...">
-              </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
+      <section class="separador">
+        <h3>Postulate</h3>
+      </section>
+      <div class="postulate d-flex justify-content-center">
+        <div class="row ">
+          <div class="col">
+            <input type="text" class="form-control" placeholder="First name" aria-label="First name">
           </div>
-          <div class="contactos">
+          <div class="col">
+            <input type="text" class="form-control" placeholder="Last name" aria-label="Last name">
+          </div>
+        </div>
+      </div>
+      <div class="contactos">
           <div class="container text-center">
             <div class="row">
               <div class="col-sm-12 col-lg-6">
                 <div class="container ">
                     <div class="row">
                         <div class="col">
-                            <a href=""><img src="./assets/fb.svg" alt=""></a> 
+                            <a href=""><img src="../assets/fb.svg" alt=""></a> 
                         </div>
                         <div class="col">
-                            <a href=""><img src="./assets/ig.svg" alt=""></a>
+                            <a href=""><img src="../assets/ig.svg" alt=""></a>
                         </div>
                         <div class="col">
-                            <a href="" ><img src="./assets/whatsapp.svg" alt=""></a>
+                            <a href="" ><img src="../assets/whatsapp.svg" alt=""></a>
                         </div>
                     </div>                    
                 </div>
@@ -91,7 +74,7 @@
               </div>
             </div>
           </div>
-        </div>
+      </div>
     </main>
     <footer>
         <div class="text-center bold">Dev Lautaro Gonzalez</div>
