--- a/pages/productos.html
+++ b/pages/productos.html
@@ -48,22 +48,22 @@
                     <div class="col-sm-12 col-lg-4 card " style="width: 18rem;">
                         <img src="../assets/clasicas.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                        <h5 class="card-title">Tortas Clasicas</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h5 class="card-title text-center">Tortas Clasicas</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non nemo nostrum numquam accusamus repellat consequatur provident facere fuga voluptatem dicta tempora, dolores optio beatae dolorum maxime, modi explicabo dolorem distinctio.</p>
                         </div>
                     </div>
-                    <div class="col-sm-12 col-lg-4 card" style="width: 18rem;">
-                        <img src="../assets/diseño.png" class="card-img-top" alt="...">
+                    <div class="col-sm-12 col-lg-4 card " style="width: 18rem;">
+                        <img src="../assets/diseño.png" class="card-img-top " alt="...">
                         <div class="card-body">
-                        <h5 class="card-title">Tortas de Diseño</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h5 class="card-title text-center">Tortas de Diseño</h5>
+                        <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur necessitatibus eum reprehenderit delectus, id nobis numquam eaque nostrum cum quas veniam quam a animi aliquid molestias, vero hic maiores aperiam!</p>
                         </div>
                     </div>
                     <div class="col-sm-12 col-lg-4 card" style="width: 18rem;">
                         <img src="../assets/galletitas.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                        <h5 class="card-title">Galletitas</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h5 class="card-title text-center">Galletitas</h5>
+                        <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur necessitatibus eum reprehenderit delectus, id nobis numquam eaque nostrum cum quas veniam quam a animi aliquid molestias, vero hic maiores aperiam!</p>
                         </div>
                     </div>
                 </div>
