--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -41,16 +41,44 @@
       <section class="separador">
         <h3>Postulate</h3>
       </section>
-      <div class="postulate d-flex justify-content-center">
-        <div class="row ">
-          <div class="col">
-            <input type="text" class="form-control" placeholder="First name" aria-label="First name">
-          </div>
-          <div class="col">
-            <input type="text" class="form-control" placeholder="Last name" aria-label="Last name">
-          </div>
+        <div class="postulate row g-3">
+            <div class="form-floating mb-3 col-md-6 col-sm-12">
+              <input type="text" class="form-control" id="floatingInput" placeholder="Nombre">
+              <label for="floatingInput">Nombre</label>
+            </div>
+            <div class="form-floating mb-3 col-md-6 col-sm-12">
+              <input type="text" class="form-control" id="floatingInput" placeholder="Apellido">
+              <label for="floatingInput">Apellido</label>
+            </div>
+            <div class="form-floating mb-3">
+              <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+              <label for="floatingInput">Correo</label>
+            </div>
+            <div class="form-floating">
+              <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea"></textarea>
+              <label for="floatingTextarea">Telefono</label>
+            </div>
+            <div class="form-floating col-md-6 col-sm-12">
+              <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea"></textarea>
+              <label for="floatingTextarea">Horario disponible</label>
+            </div>
+            <div class="form-floating col-md-6 col-sm-12">
+              <select class="form-select" id="floatingSelect" aria-label="Floating label select example">
+                <option selected></option>
+                <option value="1">Cocina</option>
+                <option value="2">Salon</option>
+                <option value="3">Caja</option>
+              </select>
+              <label for="floatingSelect">¿A que puesto te gustaria postularte?</label>
+            </div>
+            <div class="mb-3">
+              <label for="formFile" class="form-label">Insertar CV</label>
+              <input class="form-control" type="file" id="formFile">
+            </div>
+            <div class="d-grid gap-2 d-md-flex justify-content-md-center">
+              <button class="btn btn-primary" type="button">Enviar</button>
+            </div>
         </div>
-      </div>
       <div class="contactos">
           <div class="container text-center">
             <div class="row">
