segunda pre entrega 12:00hs

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -11,7 +11,6 @@
     <title>Abamel</title>
 </head>
 <body>
-
     <header>
         <nav class="navbar navbar-expand-lg" style="background-color: #fad7da;">
             <div class="container-fluid">
@@ -40,35 +39,8 @@
     </header>
     <main>
         <section class="separador">
-            <h3>Nuestras delicatessen</h3>
+            <h3>Sobre nosotros</h3>
         </section>
-        <div class="productos">
-            <div class="container">
-                <div class="row d-flex justify-content-around">
-                    <div class="col-sm-12 col-lg-4 card " style="width: 18rem;">
-                      <img src="../assets/clasicas.png" class="card-img-top" alt="...">
-                      <div class="card-body">
-                        <h5 class="card-title text-center">Tortas Clasicas</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non nemo nostrum numquam accusamus repellat consequatur provident facere fuga voluptatem dicta tempora, dolores optio beatae dolorum maxime, modi explicabo dolorem distinctio.</p>
-                      </div>
-                    </div>
-                    <div class="col-sm-12 col-lg-4 card " style="width: 18rem;">
-                      <img src="../assets/diseño.png" class="card-img-top " alt="...">
-                      <div class="card-body">
-                        <h5 class="card-title text-center">Tortas de Diseño</h5>
-                        <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur necessitatibus eum reprehenderit delectus, id nobis numquam eaque nostrum cum quas veniam quam a animi aliquid molestias, vero hic maiores aperiam!</p>
-                      </div>
-                    </div>
-                    <div class="col-sm-12 col-lg-4 card" style="width: 18rem;">
-                      <img src="../assets/galletitas.png" class="card-img-top" alt="...">
-                      <div class="card-body">
-                        <h5 class="card-title text-center">Galletitas</h5>
-                        <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur necessitatibus eum reprehenderit delectus, id nobis numquam eaque nostrum cum quas veniam quam a animi aliquid molestias, vero hic maiores aperiam!</p>
-                      </div>
-                    </div>
-                </div>
-            </div>
-        </div>
     </main>
     <footer>
         <div class="text-center bold">Dev Lautaro Gonzalez</div>
