--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
                     <a class="nav-link active" aria-current="page" href="pages/productos.html">Productos</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Pedidos</a>
+                    <a class="nav-link active" aria-current="page" href="./pages/pedidos.html">Pedidos</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Nosotros</a>
+                    <a class="nav-link active" aria-current="page" href="./pages/nosotros.html">Nosotros</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="./pages/contacto.html">Empleo</a>
+                    <a class="nav-link active" aria-current="page" href="./pages/empleo.html">Empleo</a>
                   </li>
                 </ul>
               </div>
@@ -47,10 +47,6 @@
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <img src="./assets/fondo.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h4>Tortas Clasicas</h4>
-                    <p>Some representative placeholder content for the first slide.</p>
-                  </div>
               </div>
               <div class="carousel-item">
                 <img src="./assets/torta1.jpg" class="d-block w-100" alt="...">
@@ -95,7 +91,6 @@
     </main>
     <footer>
         <div class="text-center bold">Dev Lautaro Gonzalez</div>
-
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
