--- a/pages/empleo.html
+++ b/pages/empleo.html
@@ -24,13 +24,13 @@
                     <a class="nav-link active" aria-current="page" href="./productos.html">Productos</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Pedidos</a>
+                    <a class="nav-link active" aria-current="page" href="./pedidos.html">Pedidos</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Nosotros</a>
+                    <a class="nav-link active" aria-current="page" href="./nosotros.html">Nosotros</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Contactos</a>
+                    <a class="nav-link active" aria-current="page" href="./empleo.html">Empleo</a>
                   </li>
                 </ul>
               </div>
@@ -76,7 +76,7 @@
               <input class="form-control" type="file" id="formFile">
             </div>
             <div class="d-grid gap-2 d-md-flex justify-content-md-center">
-              <button class="btn btn-primary" type="button">Enviar</button>
+              <button class="btn" type="button">Enviar</button>
             </div>
         </div>
       <div class="contactos">
