--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./assets/logo_chiquito.png"/>
+    <meta name="description" content="Tienda de pasteleria en Argentina. Compra y reserva tus pedidos aqui">
+    <link rel="shortcut icon" href="./assets/logo_chiquito.svg"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/styles.css">
-    <title>Abamel</title>
+    <title>Abamel | Pasteleria Argentina</title>
 </head>
 <body>
 
     <header>
         <nav class="navbar navbar-expand-lg" style="background-color: #fad7da;">
             <div class="container-fluid">
-              <a class="navbar-brand" href="index.html"><img src="./assets/logo.png" alt=""></a>
+              <a id="logo" class="navbar-brand" href="index.html"><img src="./assets/logo.png" alt="Mi logo"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -46,13 +47,13 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="./assets/fondo.jpg" class="d-block w-100" alt="...">
+                <img src="./assets/fondo.webp " class="d-block w-100" alt="Mesa dulce">
               </div>
               <div class="carousel-item">
-                <img src="./assets/torta1.jpg" class="d-block w-100" alt="...">
+                <img src="./assets/torta1.webp" class="d-block w-100" alt="Masas dulces">
               </div>
               <div class="carousel-item">
-                <img src="./assets/torta2.jpg" class="d-block w-100" alt="...">
+                <img src="./assets/torta2.webp" class="d-block w-100" alt="Torta de chocolate">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -71,13 +72,13 @@
                 <div class="container ">
                     <div class="row">
                         <div class="col">
-                            <a href=""><img src="./assets/fb.svg" alt=""></a> 
+                            <a href=""><img src="./assets/fb.svg" alt="Facebook"></a> 
                         </div>
                         <div class="col">
-                            <a href=""><img src="./assets/ig.svg" alt=""></a>
+                            <a href=""><img src="./assets/ig.svg" alt="Instagram"></a>
                         </div>
                         <div class="col">
-                            <a href="" ><img src="./assets/whatsapp.svg" alt=""></a>
+                            <a href="" ><img src="./assets/whatsapp.svg" alt="whatsapp"></a>
                         </div>
                     </div>                    
                 </div>
