--- a/pages/empleo.html
+++ b/pages/empleo.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="../assets/logo_chiquito.png"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
-    <title>Abamel</title>
+    <title>Empleos | Abamel</title>
 </head>
 <body>
 
@@ -39,7 +39,7 @@
     </header>
     <main>
       <section class="separador">
-        <h3>Postulate</h3>
+        <h3>Postulate </h3>
       </section>
         <div class="postulate row g-3">
             <div class="form-floating mb-3 col-md-6 col-sm-12">
