--- a/pages/productos.html
+++ b/pages/productos.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
-    <title>Abamel</title>
+    <title>Productos | Abamel</title>
 </head>
 <body>
 
@@ -46,21 +46,21 @@
             <div class="container">
                 <div class="row d-flex justify-content-around">
                     <div class="col-sm-12 col-lg-4 card " style="width: 18rem;">
-                      <img src="../assets/clasicas.png" class="card-img-top" alt="...">
+                      <img src="../assets/clasicas.webp" class="card-img-top" alt="...">
                       <div class="card-body">
                         <h5 class="card-title text-center">Tortas Clasicas</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non nemo nostrum numquam accusamus repellat consequatur provident facere fuga voluptatem dicta tempora, dolores optio beatae dolorum maxime, modi explicabo dolorem distinctio.</p>
                       </div>
                     </div>
                     <div class="col-sm-12 col-lg-4 card " style="width: 18rem;">
-                      <img src="../assets/diseño.png" class="card-img-top " alt="...">
+                      <img src="../assets/diseño.webp" class="card-img-top " alt="...">
                       <div class="card-body">
                         <h5 class="card-title text-center">Tortas de Diseño</h5>
                         <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur necessitatibus eum reprehenderit delectus, id nobis numquam eaque nostrum cum quas veniam quam a animi aliquid molestias, vero hic maiores aperiam!</p>
                       </div>
                     </div>
                     <div class="col-sm-12 col-lg-4 card" style="width: 18rem;">
-                      <img src="../assets/galletitas.png" class="card-img-top" alt="...">
+                      <img src="../assets/galletitas.webp" class="card-img-top" alt="...">
                       <div class="card-body">
                         <h5 class="card-title text-center">Galletitas</h5>
                         <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur necessitatibus eum reprehenderit delectus, id nobis numquam eaque nostrum cum quas veniam quam a animi aliquid molestias, vero hic maiores aperiam!</p>
