--- a/pages/pedidos.html
+++ b/pages/pedidos.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../assets/logo_chiquito.png"/>
+    <meta name="description" content="Contanos que te gustaria pedir.">
+    <link rel="shortcut icon" href="../assets/logo_chiquito.svg"/>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
@@ -41,6 +42,178 @@
         <section class="separador">
             <h3>Detallanos tu pedido</h3>
         </section>
+        <div class="pedidos padd container text-center">
+          <div class="row clasicas align-items-center">
+            <div class="col-3">
+            <p>Tortas Clasicas</p>
+            </div>
+            <div class="col-9">
+              <div class="row alt">
+                <div class="col">Lemon Pie</div>
+                <div class="col">
+                  <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="Lemonpai" id="Lemonpai" value="option1">
+                    <label class="form-check-label" for="Lemonpai">Grande</label>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="Lemonpai" id="Lemonpai" value="option2">
+                    <label class="form-check-label" for="Lemonpai">Chica</label>
+                  </div>
+                </div>
+              </div>
+              <div class="row alt">
+                <div class="col">Red Belvet</div>
+                <div class="col">
+                  <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="redbelvet" id="redbelvet" value="option3">
+                    <label class="form-check-label" for="redbelvet">Grande</label>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="redbelvet" id="redbelvet" value="option4">
+                    <label class="form-check-label" for="redbelvet">Chica</label>
+                  </div>
+                </div>
+              </div>
+              <div class="row alt">
+                <div class="col">Balcarce</div>       
+                <div class="col">
+                  <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="balcarce" id="balcarce" value="option5">
+                    <label class="form-check-label" for="balcarce">Grande</label>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="balcarce" id="balcarce" value="option6">
+                    <label class="form-check-label" for="balcarce">Chica</label>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row diseño align-items-center">
+            <div class="col-3">
+              <p>Tortas de Diseño</p>
+            </div>
+            <div class="col-9">
+              <div class="row alt">
+                <div class="col">Cartera</div>
+                <div class="col">
+                  <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="cartera" id="cartera" value="option7">
+                    <label class="form-check-label" for="cartera">Grande</label>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="cartera" id="cartera" value="option8">
+                    <label class="form-check-label" for="cartera">Chica</label>
+                  </div>
+                </div>
+              </div>
+              <div class="row alt">
+                <div class="col">Selva</div>
+                <div class="col">
+                  <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="selva" id="selva" value="option9">
+                    <label class="form-check-label" for="selva">Grande</label>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="selva" id="selva" value="option10">
+                    <label class="form-check-label" for="selva">Chica</label>
+                  </div>
+                </div>
+              </div>
+              <div class="row alt">
+                <div class="col">Auto</div>       
+                <div class="col">
+                  <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="auto" id="auto" value="option11">
+                    <label class="form-check-label" for="auto">Grande</label>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="auto" id="auto" value="option12">
+                    <label class="form-check-label" for="auto">Chica</label>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row galletitas align-items-center">
+            <div class="col-3">
+              <p>Mesa Dulce</p>
+            </div>
+            <div class="col-9">
+              <div class="row alt">
+                <div class="col">Alfajores</div>
+                  <div class="col">
+                    <div class="form-check form-check-inline">
+                      <input class="form-check-input" type="radio" name="alfajores" id="alfajores" value="option13">
+                      <label class="form-check-label" for="alfajores">x6 un</label>
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="form-check form-check-inline">
+                      <input class="form-check-input" type="radio" name="alfajores" id="alfajores" value="option14">
+                      <label class="form-check-label" for="alfajores">x12 un</label>
+                    </div>
+                  </div>
+              </div>
+              <div class="row alt">
+                <div class="col">Galletitas con Formas</div>
+                  <div class="col">
+                    <div class="form-check form-check-inline">
+                      <input class="form-check-input" type="radio" name="galletitas" id="galletitas" value="option15">
+                      <label class="form-check-label" for="galletitas">x6 un</label>
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="form-check form-check-inline">
+                      <input class="form-check-input" type="radio" name="galletitas" id="galletitas" value="option16">
+                      <label class="form-check-label" for="galletitas">x12 un</label>
+                    </div>
+                  </div>
+              </div>
+              <div class="row alt">
+                <div class="col">Postrecitos</div>       
+                  <div class="col">
+                    <div class="form-check form-check-inline">
+                      <input class="form-check-input" type="radio" name="postres" id="postres" value="option17">
+                      <label class="form-check-label" for="postres">x6 un</label>
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="form-check form-check-inline">
+                      <input class="form-check-input" type="radio" name="postres" id="postres" value="option18">
+                      <label class="form-check-label" for="postres">x12 un</label>
+                    </div>
+                  </div>
+              </div>
+            </div>
+          </div>
+          <div class="envio">
+            <p>Te comentamos que cada torta chica rinde aproximadamente 25/30 porciones. <br>
+              Mietras que una torta grande rinde aproximadamente 50/60 porciones.
+            </p>
+            <span>Comentanos si tenes alguna idea de diseño o si necesitas que excluyamos algun ingrediente!.</span>
+            <div class="text-center padd">
+              <div class="input-group ">
+                <span class="input-group-text">Comentarios aqui!</span>
+                <textarea class="form-control" aria-label="With textarea"></textarea>
+              </div>
+            </div>
+            <button type="button padd" class="btn btn-outline-dark">Enviar!</button>
+          </div>
+         </div>
+      </div>
     </main>
     <footer>
         <div class="text-center bold">Dev Lautaro Gonzalez</div>
