--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../assets/logo_chiquito.png"/>
+    <meta name="description" content="Nuestra historia es la tuya.">
+    <link rel="shortcut icon" href="../assets/logo_chiquito.svg"/>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
@@ -41,6 +42,20 @@
         <section class="separador">
             <h3>Sobre nosotros</h3>
         </section>
+        <section class="nosotros">
+          <div class="container padd text-center">
+            <div class="row ">
+              <div class="col ">
+                <div class="nosotros--texto">
+                  <h2 class="fuente">CONOCÉ <br> NUESTRA HISTORIA</h2>
+                  <p>Somos una empresa Familiar y llevamos desde 1928 manteniendo el sabor, respetando las recetas, los ingredientes naturales, la calidad tradicional y todos los procesos de elaboración artesanales que nos fueron transferidos de Generación en Generación. El sabor y el gusto del buen hacer caracterizan todas y cada una de nuestras creaciones</p>
+                </div>
+              </div>
+              <div class="col"><img src="../assets/nosotros.webp" alt="Un cafe y una torta"></div>
+            </div>
+          </div>
+        </section>
+        
     </main>
     <footer>
         <div class="text-center bold">Dev Lautaro Gonzalez</div>
