--- a/index.html
+++ b/index.html
@@ -65,11 +65,36 @@
               <span class="visually-hidden">Next</span>
             </button>
           </div>
+          <div class="container principal text-center padd">
+            <div class="row align-items-center">
+              <div class="col-lg-4 col-sm-12">
+                <img src="./assets/amasando.webp" alt="">
+                <h2>Calidad</h2>
+                <p>
+                  Trabajando con las mejores materias primas y la capacitación constante ofrecemos productos nobles y sabor inigualable
+                </p>
+              </div>
+              <div class="col-lg-4 col-sm-12">
+                <img src="./assets/quemando.webp" alt="">
+                <h2>Experiencia</h2>
+                <p>
+                  Siete años y siete locales comerciales nos respaldan. Toda nuestra experiencia volcada a satisfacer la demanda, estando presentes en cada momento de sus vidas
+                </p>
+              </div>
+              <div class="col-lg-4 col-sm-12">
+                <img src="./assets/chef.webp" alt="">
+                <h2>Nuevas Tendencias</h2>
+                <p>
+                  Desarrollamos nuevos productos permanentemente alineados a las nuevas tendencias del mercado direccionadas a una vida mas saludable.
+                </p>
+              </div>
+            </div>
+          </div>
           <div class="contactos">
           <div class="container text-center">
-            <div class="row">
+            <div class="row align-items-center">
               <div class="col-sm-12 col-lg-6">
-                <div class="container ">
+                <div class="container redes">
                     <div class="row">
                         <div class="col">
                             <a href=""><img src="./assets/fb.svg" alt="Facebook"></a> 
