--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -44,14 +44,16 @@
         </section>
         <section class="nosotros">
           <div class="container padd text-center">
-            <div class="row ">
-              <div class="col ">
-                <div class="nosotros--texto">
-                  <h2 class="fuente">CONOCÉ <br> NUESTRA HISTORIA</h2>
+            <div class="row align-items-center">
+              <div class="col-sm-12  col-lg-6">
+                <div class="nosotros--texto ">
+                  <h2 >CONOCÉ <br> NUESTRA HISTORIA</h2>
                   <p>Somos una empresa Familiar y llevamos desde 1928 manteniendo el sabor, respetando las recetas, los ingredientes naturales, la calidad tradicional y todos los procesos de elaboración artesanales que nos fueron transferidos de Generación en Generación. El sabor y el gusto del buen hacer caracterizan todas y cada una de nuestras creaciones</p>
                 </div>
               </div>
-              <div class="col"><img src="../assets/nosotros.webp" alt="Un cafe y una torta"></div>
+              <div class="col-sm-12 col-lg-6">
+                <img src="../assets/nosotros.webp" alt="Un cafe y una torta">
+              </div>
             </div>
           </div>
         </section>
