--- a/pages/pedidos.html
+++ b/pages/pedidos.html
@@ -44,12 +44,14 @@
         </section>
         <div class="pedidos padd container text-center">
           <div class="row clasicas align-items-center">
-            <div class="col-3">
-            <p>Tortas Clasicas</p>
+            <div class="col-lg-3 col-sm-12">
+              <p>Tortas Clasicas</p>
             </div>
-            <div class="col-9">
-              <div class="row alt">
-                <div class="col">Lemon Pie</div>
+            <div class="col-lg-9 col-sm-12">
+              <div class="row alt align-items-center">
+                <div class="col">
+                  Lemon Pie
+                </div>
                 <div class="col">
                   <div class="form-check form-check-inline">
                     <input class="form-check-input" type="radio" name="Lemonpai" id="Lemonpai" value="option1">
@@ -63,8 +65,10 @@
                   </div>
                 </div>
               </div>
-              <div class="row alt">
-                <div class="col">Red Belvet</div>
+              <div class="row alt align-items-center">
+                <div class="col">
+                  Red Belvet
+                </div>
                 <div class="col">
                   <div class="form-check form-check-inline">
                     <input class="form-check-input" type="radio" name="redbelvet" id="redbelvet" value="option3">
@@ -78,7 +82,7 @@
                   </div>
                 </div>
               </div>
-              <div class="row alt">
+              <div class="row alt align-items-center">
                 <div class="col">Balcarce</div>       
                 <div class="col">
                   <div class="form-check form-check-inline">
@@ -96,11 +100,11 @@
             </div>
           </div>
           <div class="row diseño align-items-center">
-            <div class="col-3">
+            <div class="col-lg-3 col-sm-12">
               <p>Tortas de Diseño</p>
             </div>
-            <div class="col-9">
-              <div class="row alt">
+            <div class="col-lg-9 col-sm-12">
+              <div class="row alt align-items-center">
                 <div class="col">Cartera</div>
                 <div class="col">
                   <div class="form-check form-check-inline">
@@ -148,10 +152,10 @@
             </div>
           </div>
           <div class="row galletitas align-items-center">
-            <div class="col-3">
+            <div class="col-lg-3 col-sm-12">
               <p>Mesa Dulce</p>
             </div>
-            <div class="col-9">
+            <div class="col-lg-9 col-sm-12">
               <div class="row alt">
                 <div class="col">Alfajores</div>
                   <div class="col">
@@ -200,7 +204,7 @@
             </div>
           </div>
           <div class="envio">
-            <p>Te comentamos que cada torta chica rinde aproximadamente 25/30 porciones. <br>
+            <p>NOTA: Cada torta chica rinde aproximadamente 25/30 porciones. <br>
               Mietras que una torta grande rinde aproximadamente 50/60 porciones.
             </p>
             <span>Comentanos si tenes alguna idea de diseño o si necesitas que excluyamos algun ingrediente!.</span>
@@ -212,8 +216,8 @@
             </div>
             <button type="button padd" class="btn btn-outline-dark">Enviar!</button>
           </div>
-         </div>
-      </div>
+        </div>
+        </div>
     </main>
     <footer>
         <div class="text-center bold">Dev Lautaro Gonzalez</div>
