--- a/pages/productos.html
+++ b/pages/productos.html
@@ -50,21 +50,21 @@
                       <img src="../assets/clasicas.webp" class="card-img-top" alt="...">
                       <div class="card-body">
                         <h5 class="card-title text-center">Tortas Clasicas</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non nemo nostrum numquam accusamus repellat consequatur provident facere fuga voluptatem dicta tempora, dolores optio beatae dolorum maxime, modi explicabo dolorem distinctio.</p>
+                        <p class="card-text">Las tortas clásicas son una delicia tradicional, con sabores caseros e ingredientes frescos. Suelen ser de capas con rellenos de dulce de leche, frutas, crema pastelera o chocolate. Son ideales para celebraciones o eventos especiales, recordando siempre los momentos felices.</p>
                       </div>
                     </div>
                     <div class="col-sm-12 col-lg-4 card " style="width: 18rem;">
                       <img src="../assets/diseño.webp" class="card-img-top " alt="...">
                       <div class="card-body">
                         <h5 class="card-title text-center">Tortas de Diseño</h5>
-                        <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur necessitatibus eum reprehenderit delectus, id nobis numquam eaque nostrum cum quas veniam quam a animi aliquid molestias, vero hic maiores aperiam!</p>
+                        <p class="card-text">Las tortas de diseño son una obra maestra culinaria, con detalles impresionantes y creativos. Son perfectas para ocasiones especiales, con diseños únicos y personalizados. Desde temáticas de películas, personajes, animales hasta diseños abstractos, las tortas de diseño son una delicia para los ojos y el paladar.</p>
                       </div>
                     </div>
                     <div class="col-sm-12 col-lg-4 card" style="width: 18rem;">
                       <img src="../assets/galletitas.webp" class="card-img-top" alt="...">
                       <div class="card-body">
                         <h5 class="card-title text-center">Galletitas</h5>
-                        <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur necessitatibus eum reprehenderit delectus, id nobis numquam eaque nostrum cum quas veniam quam a animi aliquid molestias, vero hic maiores aperiam!</p>
+                        <p class="card-text">Las galletitas caseras son una delicia perfecta para eventos, ya sea en una reunión familiar, una fiesta de cumpleaños, una boda o cualquier otra ocasión especial. Su sabor único y su presentación atractiva las convierten en una opción ideal para complementar la decoración del evento y ofrecer una deliciosa merienda. Además, su preparación casera las hace ideales para eventos temáticos y personalizados.</p>
                       </div>
                     </div>
                 </div>
