--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           </nav>
     </header>
     <main>
-        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+      <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -64,7 +64,7 @@
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Next</span>
             </button>
-          </div>
+      </div>
           <div class="container principal text-center padd">
             <div class="row align-items-center">
               <div class="col-lg-4 col-sm-12">
@@ -90,30 +90,34 @@
               </div>
             </div>
           </div>
-          <div class="contactos">
-          <div class="container text-center">
-            <div class="row align-items-center">
-              <div class="col-sm-12 col-lg-6">
-                <div class="container redes">
-                    <div class="row">
-                        <div class="col">
-                            <a href=""><img src="./assets/fb.svg" alt="Facebook"></a> 
-                        </div>
-                        <div class="col">
-                            <a href=""><img src="./assets/ig.svg" alt="Instagram"></a>
-                        </div>
-                        <div class="col">
-                            <a href="" ><img src="./assets/whatsapp.svg" alt="whatsapp"></a>
-                        </div>
-                    </div>                    
-                </div>
+          <div class="contactos container text-center align-items-center">
+            <div class="row">
+              <div class="col-sm-12 col-lg-6 redes">
+                  <p>
+                    Contactanos 
+                  </p>
+                  <div class="row">
+                    <div class="col">
+                      <a href=""><img src="./assets/fb.svg" alt="Facebook"></a> 
+                    </div>
+                    <div class="col">
+                      <a href=""><img src="./assets/ig.svg" alt="Instagram"></a>
+                    </div>
+                    <div class="col">
+                      <a href="" ><img src="./assets/whatsapp.svg" alt="whatsapp"></a>
+                    </div>
+                  </div>
               </div>
               <div class="col-sm-12 col-lg-6">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1893.6572620580228!2d-58.33964953500877!3d-34.75410237358631!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a32d1a9b35cf91%3A0xd6365b7fa1d6609e!2sLa%20Golondrina%204459%2C%20B1834CYD%20Temperley%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1670197213745!5m2!1ses-419!2sar" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <div class="container mapa">
+                  <p>
+                    Ubicanos
+                  </p>
+                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1893.6572620580228!2d-58.33964953500877!3d-34.75410237358631!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a32d1a9b35cf91%3A0xd6365b7fa1d6609e!2sLa%20Golondrina%204459%2C%20B1834CYD%20Temperley%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1670197213745!5m2!1ses-419!2sar" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
               </div>
             </div>
           </div>
-        </div>
     </main>
     <footer>
         <div class="text-center bold">Dev Lautaro Gonzalez</div>
