--- a/pages/productos.html
+++ b/pages/productos.html
@@ -45,22 +45,22 @@
         </section>
         <div class="productos">
             <div class="container">
-                <div class="row d-flex justify-content-around">
-                    <div class="col-sm-12 col-lg-4 card " style="width: 18rem;">
+                <div class="row d-flex justify-content-around ">
+                    <div class="col-sm-12 col-lg-4 card align-items-center" style="width: 18rem;">
                       <img src="../assets/clasicas.webp" class="card-img-top" alt="...">
                       <div class="card-body">
-                        <h5 class="card-title text-center">Tortas Clasicas</h5>
+                        <h5 class="card-title text-center ">Tortas Clasicas</h5>
                         <p class="card-text">Las tortas clásicas son una delicia tradicional, con sabores caseros e ingredientes frescos. Suelen ser de capas con rellenos de dulce de leche, frutas, crema pastelera o chocolate. Son ideales para celebraciones o eventos especiales, recordando siempre los momentos felices.</p>
                       </div>
                     </div>
-                    <div class="col-sm-12 col-lg-4 card " style="width: 18rem;">
+                    <div class="col-sm-12 col-lg-4 card align-items-center " style="width: 18rem;">
                       <img src="../assets/diseño.webp" class="card-img-top " alt="...">
                       <div class="card-body">
                         <h5 class="card-title text-center">Tortas de Diseño</h5>
                         <p class="card-text">Las tortas de diseño son una obra maestra culinaria, con detalles impresionantes y creativos. Son perfectas para ocasiones especiales, con diseños únicos y personalizados. Desde temáticas de películas, personajes, animales hasta diseños abstractos, las tortas de diseño son una delicia para los ojos y el paladar.</p>
                       </div>
                     </div>
-                    <div class="col-sm-12 col-lg-4 card" style="width: 18rem;">
+                    <div class="col-sm-12 col-lg-4 card align-items-center" style="width: 18rem;">
                       <img src="../assets/galletitas.webp" class="card-img-top" alt="...">
                       <div class="card-body">
                         <h5 class="card-title text-center">Galletitas</h5>
