--- a/pages/empleo.html
+++ b/pages/empleo.html
@@ -80,30 +80,34 @@
               <button class="btn" type="button">Enviar</button>
             </div>
         </div>
-      <div class="contactos">
-          <div class="container text-center">
-            <div class="row">
-              <div class="col-sm-12 col-lg-6">
-                <div class="container ">
-                    <div class="row">
-                        <div class="col">
-                            <a href=""><img src="../assets/fb.svg" alt=""></a> 
-                        </div>
-                        <div class="col">
-                            <a href=""><img src="../assets/ig.svg" alt=""></a>
-                        </div>
-                        <div class="col">
-                            <a href="" ><img src="../assets/whatsapp.svg" alt=""></a>
-                        </div>
-                    </div>                    
+        <div class="contactos container text-center align-items-center">
+          <div class="row">
+            <div class="col-sm-12 col-lg-6 redes">
+                <p>
+                  Contactanos 
+                </p>
+                <div class="row">
+                  <div class="col">
+                    <a href=""><img src="../assets/fb.svg" alt="Facebook"></a> 
+                  </div>
+                  <div class="col">
+                    <a href=""><img src="../assets/ig.svg" alt="Instagram"></a>
+                  </div>
+                  <div class="col">
+                    <a href="" ><img src="../assets/whatsapp.svg" alt="whatsapp"></a>
+                  </div>
                 </div>
-              </div>
-              <div class="col-sm-12 col-lg-6">
+            </div>
+            <div class="col-sm-12 col-lg-6">
+              <div class="container mapa">
+                <p>
+                  Ubicanos
+                </p>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1893.6572620580228!2d-58.33964953500877!3d-34.75410237358631!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a32d1a9b35cf91%3A0xd6365b7fa1d6609e!2sLa%20Golondrina%204459%2C%20B1834CYD%20Temperley%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1670197213745!5m2!1ses-419!2sar" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
               </div>
             </div>
           </div>
-      </div>
+        </div>
     </main>
     <footer>
         <div class="text-center bold">Dev Lautaro Gonzalez</div>
