--- a/404.html
+++ b/404.html
@@ -5,33 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Esta pagina no existe :C.">
-    <link rel="shortcut icon" href="../assets/logo_chiquito.svg"/>
+    <link rel="shortcut icon" href="./assets/logo_chiquito.svg"/>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <title>404 | Abamel</title>
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-lg" style="background-color: #fad7da;">
             <div class="container-fluid">
-              <a class="navbar-brand" href="../index.html"><img src="../assets/logo.png" alt=""></a>
+              <a class="navbar-brand" href="./index.html"><img src="./assets/logo.png" alt=""></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="./productos.html">Productos</a>
+                    <a class="nav-link active" aria-current="page" href="./pages/productos.html">Productos</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="./pedidos.html">Pedidos</a>
+                    <a class="nav-link active" aria-current="page" href="./pages/pedidos.html">Pedidos</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="./nosotros.html">Nosotros</a>
+                    <a class="nav-link active" aria-current="page" href="./pages/nosotros.html">Nosotros</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="./empleo.html">Empleo</a>
+                    <a class="nav-link active" aria-current="page" href="./pages/empleo.html">Empleo</a>
                   </li>
                 </ul>
               </div>
@@ -39,10 +39,10 @@
           </nav>
     </header>
     <main>
-        <div class="error-container">
+        <div class="error-container container text-center padd">
             <h1>Error 404</h1>
             <p>La página que estás buscando no se ha encontrado.</p>
-            <a href="/" class="home-link">Volver a la página principal</a>
+            <a href="./index.html" class="home-link link">Volver a la página principal</a>
           </div>
     </main>
     <footer>
