--- a/pages/empleo.html
+++ b/pages/empleo.html
@@ -41,7 +41,11 @@
       <section class="separador">
         <h3>Postulate </h3>
       </section>
-        <div class="postulate row g-3">
+
+      <div id="verCarrito" class="container text-center">
+        <h2>CARRITO</h2>
+      </div>
+        <!-- <div class="postulate row g-3">
             <div class="form-floating mb-3 col-md-6 col-sm-12">
               <input type="text" class="form-control" id="floatingInput" placeholder="Nombre">
               <label for="floatingInput">Nombre</label>
@@ -106,8 +110,10 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
     </main>
+    <script src="../js/contenido.js"></script>
+    <script src="../js/main.js"></script>
     <footer>
         <div class="text-center bold">Dev Lautaro Gonzalez</div>
     </footer>
