--- a/pages/productos.html
+++ b/pages/productos.html
@@ -31,7 +31,7 @@
                     <a class="nav-link active" aria-current="page" href="./nosotros.html">Nosotros</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="./empleo.html">Empleo</a>
+                    <a id="verCarrito" class="nav-link active" aria-current="page" href="" >🛒</a>
                   </li>
                 </ul>
               </div>
@@ -42,7 +42,11 @@
         <section class="separador">
             <h3>Nuestras delicatessen</h3>
         </section>
-        <div class="productos">
+        <div id="principal" class="container aver"></div>
+        <div id="carrito"></div>
+
+
+        <!-- <div class="productos">
             <div class="container">
                 <div class="row d-flex justify-content-around ">
                     <div class="col-sm-12 col-lg-4 card align-items-center" style="width: 18rem;">
@@ -77,11 +81,12 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
     </main>
     <footer>
         <div class="text-center bold">Dev Lautaro Gonzalez</div>
     </footer>
+    <script src="../js/contenido.js"></script>
     <script src="../js/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
